@@ -612,6 +612,12 @@ New icons are welcome and should be sent back to the author to be incorporated
 in the next version.
 <p>
 
+<LI><b><code>Icon comment &lt;icon&gt; = &lt;comment&gt;</code></b>
+<br>
+Icons may contain a comment, which is then used in email notifications instead
+of the icon file name. One has to add a separate icon comment for each icon file.
+<p>
+
 <LI><b><code>Options &lt;attribute&gt; = boolean</code></b>
 <br>
 If an attribute is marked "<I>boolean</I>" this way, a checkbox is displayed for
