@@ -33,17 +33,18 @@ starting at the items with the most votes. You can vote for a feature, or sugges
 <tr><th>Feature<th>Votes</tr>
 
 <tr><td>Get message from standard input in elog submission program<td>1</tr>
-<tr><td>Implement groups of users<td>1</tr>
+<tr><td>Implement groups of users<td>2</tr>
 <tr><td>Display the last logbook entry date and author on logbook selection page<td>1</tr>
 <tr><td>Multiple templates for "Preset text"<td>1</tr>
-<tr><td>Conditional attributes<td>2</tr>
+<tr><td>Conditional attributes<td>3</tr>
 <tr><td>Remove HTML tags for summary tags for "summary only" search mode<td>1</tr>
 <tr><td>Use "and" and "or" operands in queries<td>1</tr>
 <tr><td>Password expiration, email forgotten password upon request<td>1</tr>
-<tr><td>Require entered attribute must be date, number, alpha, certain length<td>2</tr>
+<tr><td>Require entered attribute must be date, number, alpha, certain length<td>3</tr>
 <tr><td>Search substring in <i>all</i> attributes (not only text body)<td>1</tr>
 <tr><td>Execute shell script on server for email (SMS, pager) notification<td>1</tr>
 <tr><td>Make attributes to display selectable in "Find" page<td>1</tr>
+<tr><td>Convert elog text files into XML files with elconv<td>1</tr>
 
 </table></center><p>
 
